--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,7 @@ encoding//src/baitap/Bai4.java=UTF-8
 encoding//src/baitap/Bai5.java=UTF-8
 encoding//src/baitap/BaiTap1/pk5/Ex2.java=UTF-8
 encoding//src/baitap/BaiTap1/pk6/Ex1.java=UTF-8
+encoding//src/baitap/BaiTap1/pk6/Ex3.java=UTF-8
 encoding//src/ex1/Ex2.java=UTF-8
 encoding//src/ex1/Ex3.java=UTF-8
 encoding//src/ex1/Ex4.java=UTF-8
